Added security on actuator endpoints